[김유정] - 예약하기 문제

--- a/src/main/resources/static/css/booking/style.css
+++ b/src/main/resources/static/css/booking/style.css
@@ -20,6 +20,10 @@
     background-color:sienna;
      color:white;
 }
+.reserve{
+    background-color:sienna;
+     color:white;
+}
 
 .reservation-confirm {
     height:300px;  
